[package]
name = "uu_renice"
version = "0.0.1"
edition = "2021"
authors = ["uutils developers"]
license = "MIT"
description = "renice ~ (uutils) Alter priority of running processes"

homepage = "https://github.com/uutils/procps"
repository = "https://github.com/uutils/procps/tree/main/src/uu/renice"
keywords = ["bsdutils", "uutils", "cross-platform", "cli", "utility"]
categories = ["command-line-utilities"]

[dependencies]
libc = { workspace = true }
uucore = { workspace = true }
clap = { workspace = true }

[lib]
path = "src/renice.rs"

[[bin]]
name = "renice"
path = "src/main.rs"
